# hexapod_ws

./: .gitignore
install/: local_setup.sh  setup.sh
install/hexapod/share/ament_index/resource_index/parent_prefix_path/: hexapod
install/hexapod/share/hexapod/: local_setup.sh  package.dsv  package.ps1  package.sh
install/hexapod/share/hexapod/model/: robot.xacro
log/: latest_build  latest_list
src/hexapod/: CMakeLists.txt
src/hexapod/config/: bridge_parameters.yaml  robot_controller.yaml
src/hexapod/launch/: model.launch.py
src/hexapod/model/: gazebo.xacro  robot.xacro
src/hexapod/rviz/: config.rviz
src/hexapod/worlds/: empty.sdf
src/hexapod_nodes/: Cargo.toml  package.xml
src/hexapod_nodes/src/: main.rs
