<?xml version="1.0"?>
<package format="3">
  <name>hexapod_nodes</name>
  <version>0.1.0</version>
  <description>Nodes for controlling a hexapod robot in ROS2 with Rust using rclrs</description>

  <maintainer email="emadmakhlouf12@gmail.com">Emad</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cargo</buildtool_depend>
  <depend>rclrs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
