<?xml version="1.0"?>
<package format="3">
  <name>hexapod_nodes</name>
  <version>0.1.0</version>
  <description>Nodes for controlling a hexapod robot in ROS2 with Rust using rclrs</description>

  <maintainer email="emadmakhlouf12@gmail.com">Emad</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cargo</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclrs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
